--- a/portal/public/index.html
+++ b/portal/public/index.html
@@ -85,7 +85,7 @@
   </style>
 
 
-  <title>Consul client lookup demo</title>
+  <title>Service discovery demo</title>
   <script type="text/javascript" src="http://knockoutjs.com/downloads/knockout-3.2.0.js"></script>
   <script type="text/javascript" src="http://knockoutjs.com/examples/resources/knockout.simpleGrid.3.0.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.js"></script>
